k8s/news-lab-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: news-lab-web
  labels:
    app.kubernetes.io/name: news-lab-web
    app.kubernetes.io/part-of: newslab
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: news-lab-web
  ports:
    - name: http
      port: 80
      targetPort: http
